Fix overflow in UI and fix for Safari (#33)
* Fix UI overflow if e.g.,bookmarks bar is visible. Fix for Safari.


* Fix max-height

--- a/addons/gst-web/src/css/vuetify.css
+++ b/addons/gst-web/src/css/vuetify.css
@@ -2177,7 +2177,7 @@
 }
 html {
   box-sizing: border-box;
-  overflow-y: scroll; /* All browsers without overlaying scrollbars */
+  overflow-y: hidden; /* All browsers without overlaying scrollbars */
   -webkit-text-size-adjust: 100%; /* iOS 8+ */
 }
 *,
@@ -3390,7 +3390,8 @@ p {
           backface-visibility: hidden;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
+  max-height: -webkit-fill-available;
   max-width: 100%;
   position: relative;
 }
